<?xml version="1.0" encoding="utf-8"?>

<!-- Basic Layout for Activity 4 (Testimonials) -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity4">

    <!-- Testimonial 1 -->
    <TextView
        android:id="@+id/textView5"
        android:layout_width="274dp"
        android:layout_height="63dp"
        android:text="@string/quot_the_translation_was_made_seamlessly_with_my_advertisement_quot"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.298" />

    <!-- Testimonial 2 -->
    <TextView
        android:id="@+id/textView6"
        android:layout_width="275dp"
        android:layout_height="75dp"
        android:layout_marginBottom="148dp"
        android:text="@string/nekko_s_timeframes_for_work_were_always_accurate_and_were_always_quick_to_reply_and_help_whenever_i_had_questions"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toEndOf="@+id/imageView2" />

    <!-- App Logo -->
    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="227dp"
        android:layout_height="107dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/go_back"
        app:layout_constraintStart_toStartOf="@+id/go_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/applogo" />

    <!-- Button for Main Activity -->
    <Button
        android:id="@+id/go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    <!-- Page Title -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/testimonials"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/app_logo"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/app_logo" />

    <!-- Testimonial Avatar 1 -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="71dp"
        android:layout_height="72dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/avatar_10" />

    <!-- Testimonial Avatar 2 -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="71dp"
        android:layout_height="72dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612"
        app:srcCompat="@drawable/avatar_13" />

    <!-- Testimonial Avatar 3 -->
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="71dp"
        android:layout_height="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.239"
        app:srcCompat="@drawable/avatar_7" />

    <!-- Testimonial 3 -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="274dp"
        android:layout_height="63dp"
        android:text="@string/quot_the_process_of_scheduling_a_consultation_was_easy_and_barely_took_any_time_at_all_quot"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.76" />

</androidx.constraintlayout.widget.ConstraintLayout>